--- a/tech.html
+++ b/tech.html
@@ -17,32 +17,6 @@
 <body>
 	<!-- NAVIGATION -->
 	<header>
-		<!-- <nav class="navbar navbar-expand-lg static-top">
-			<div class="container">
-				<a class="navbar-brand" href="index.html">Anna Janiak</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active px-3">
-							<a class="nav-link" href="tech.html">TECH
-								<span class="sr-only">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item px-3">
-							<a class="nav-link" href="agile.html">Agile</a>
-						</li>
-						<li class="nav-item px-3">
-							<a class="nav-link" href="softskills.html">Soft Skills</a>
-						</li>
-						<li class="nav-item px-3">
-							<a class="nav-link" href="contact.html">Contact</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav> -->
 		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -155,45 +129,16 @@
 		</div>
 	</div>
 
-	<!--FOOTER-->
-	<footer class="footer">
-		<!-- <div class="container">
-			<div class="row">
-				<div class="col-sm">
-					<div class="phone-number footer-item">
-						<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
-						</a>
-					</div>
-				</div>
-				<div class="col-sm">
-					<ul class="social-networks footer-item">
-						<li>
-							<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm">
-					<div class="download footer-item">
-						<p>Download CV.pdf</p>
-						<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
-							<i class="fas fa-download"></i></a>
-					</div>
-				</div>
+		<!--FOOTER-->
+		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+			<div class="container text-center">
+				<span class="download">
+            <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
+							<i class="fas fa-download"></i></a></small><hr>
+                            </span>
+				<small>Copyright &copy; Anna Janiak</small>
 			</div>
-		</div> -->
-	</footer>
+		</footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
