--- a/contact.html
+++ b/contact.html
@@ -137,11 +137,13 @@
 		<!--FOOTER-->
 		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
 			<div class="container text-center">
-            <span class="download">
+				<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><hr>
                             </span>
+				<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
+                </span>
 			</div>
 		</footer>
 
