--- a/agile.html
+++ b/agile.html
@@ -41,6 +41,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
@@ -94,7 +97,9 @@
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><hr>
                             </span>
-			<small>Copyright &copy; Anna Janiak</small>
+			<span class="copy-right">
+				<small>Copyright &copy; Anna Janiak</small>
+                </span>
 		</div>
 	</footer>
 
