--- a/softskills.html
+++ b/softskills.html
@@ -40,6 +40,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
@@ -53,16 +56,18 @@
 		</div>
 	</div>
 
-		<!--FOOTER-->
-		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-			<div class="container text-center">
-				<span class="download">
+	<!--FOOTER-->
+	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+		<div class="container text-center">
+			<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><hr>
                             </span>
+			<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
-			</div>
-		</footer>
+                </span>
+		</div>
+	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
