third font applied

--- a/agile.html
+++ b/agile.html
@@ -41,7 +41,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
-                    <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 				</ul>
@@ -58,7 +58,47 @@
 		</div>
 
 		<!--Metodologies-->
+
 		<div class="row">
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Special title treatment</h5>
+						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Special title treatment</h5>
+						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<div class="card">
+				<div class="card-body">
+					<h5 class="card-title">Special title treatment</h5>
+					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+	<!-- <div class="row">
 			<div class="col-4">
 				<h3>SCRUM</h3>
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem ipsam nulla, magni veniam iure,
@@ -88,7 +128,7 @@
 					target="_blank">Read More</a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!--FOOTER-->
 	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
