--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="typewriter" id="landing-content">
-					<h1>I am creative. I am stubborn. I am full stack developer.</h1>
+					<h1>I am full stack developer.</h1>
 				</div>
 			</div>
 		</div>
