--- a/agile.html
+++ b/agile.html
@@ -49,86 +49,46 @@
 		</nav>
 	</header>
 
-	<!--Image-->
-	<div class="container">
+	<!--IMAGE-->
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<div class="agile-image image"></div>
 			</div>
 		</div>
 
-		<!--Metodologies-->
-
+		<!--METODOLOGIES-->
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
-						<h5 class="card-title">Special title treatment</h5>
+						<h5 class="card-title">SCRUM</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
+						<a href="https://www.scrum.org/" class="btn btn-primary">Official website</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
-						<h5 class="card-title">Special title treatment</h5>
+						<h5 class="card-title">KANBAN</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
+						<a href="https://www.scrum.org/resources/kanban-guide-scrum-teams"
+							class="btn btn-primary">Official website</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">SAFe</h5>
+						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<a href="https://www.scaledagileframework.com/" class="btn btn-primary">Official website</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-4">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title">Special title treatment</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-		</div>
 	</div>
-
-
-
-
-
-
-
-
-
-	<!-- <div class="row">
-			<div class="col-4">
-				<h3>SCRUM</h3>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem ipsam nulla, magni veniam iure,
-					magnam consequuntur, dicta rerum temporibus laborum perspiciatis amet explicabo fugit esse.
-					Voluptatibus, harum perspiciatis! Eligendi, doloribus!</p>
-				<a href="https://www.scrum.org/" type="button" class="btn btn-outline-secondary" target="_blank">Read
-					More</a>
-			</div>
-			<div class="col-4">
-				<h3>KANBAN</h3>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam ab fuga repudiandae, qui,
-					suscipit
-					aperiam enim corrupti laboriosam accusamus exercitationem? Aut laborum voluptas aliquid similique
-					minima
-					delectus maxime odio.</p>
-				<a href="https://www.scrum.org/resources/kanban-guide-scrum-teams" type="button"
-					class="btn btn-outline-secondary" target="_blank">Read More</a>
-			</div>
-			<div class="col-4">
-				<h3>SAFe</h3>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus inventore, saepe veritatis alias
-					nihil
-					excepturi ullam nostrum rerum quam sint, est dignissimos eum perferendis earum perspiciatis
-					obcaecati
-					eius quod natus!</p>
-				<a href="https://www.scaledagileframework.com/" type="button" class="btn btn-outline-secondary"
-					target="_blank">Read More</a>
-			</div>
-		</div>
-	</div> -->
 
 	<!--FOOTER-->
 	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
