--- a/softskills.html
+++ b/softskills.html
@@ -56,6 +56,37 @@
 		</div>
 	</div>
 
+    <!--CARDS-->
+    <div class="row">
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">AVIATION</h5>
+						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<a href="https://ww2.jeppesen.com/" class="btn btn-primary">Company's website</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">HUMAN RESOURCES</h5>
+						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-primary">Company's website</a>
+					</div>
+				</div>
+			</div>
+            <div class="col-sm-4">
+			<div class="card">
+				<div class="card-body">
+					<h5 class="card-title">TV NEWS MEDIA</h5>
+					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<a href="https://tvn24.pl/" class="btn btn-primary">Company's website</a>
+				</div>
+			</div>
+		</div>
+		</div>
+  
 	<!--FOOTER-->
 	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
 		<div class="container text-center">
