--- a/agile.html
+++ b/agile.html
@@ -50,7 +50,7 @@
 	</header>
 
 	<!--IMAGE-->
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div class="col">
 				<div class="agile-image image"></div>
@@ -64,7 +64,7 @@
 					<div class="card-body">
 						<h5 class="card-title">SCRUM</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="https://www.scrum.org/" class="btn btn-primary">Official website</a>
+						<a href="https://www.scrum.org/" class="btn btn-primary" target="_blank">Official website</a>
 					</div>
 				</div>
 			</div>
@@ -74,7 +74,7 @@
 						<h5 class="card-title">KANBAN</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 						<a href="https://www.scrum.org/resources/kanban-guide-scrum-teams"
-							class="btn btn-primary">Official website</a>
+							class="btn btn-primary" target="_blank">Official website</a>
 					</div>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 					<div class="card-body">
 						<h5 class="card-title">SAFe</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="https://www.scaledagileframework.com/" class="btn btn-primary">Official website</a>
+						<a href="https://www.scaledagileframework.com/" class="btn btn-primary" target="_blank">Official website</a>
 					</div>
 				</div>
 			</div>
