--- a/softskills.html
+++ b/softskills.html
@@ -48,7 +48,7 @@
 		</nav>
 	</header>
 
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div class="col">
 				<div class="softskills-image image"></div>
@@ -61,9 +61,9 @@
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
-						<h5 class="card-title">AVIATION</h5>
+						<h5 class="card-title">IT in AVIATION</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="https://ww2.jeppesen.com/" class="btn btn-primary">Company's website</a>
+						<a href="https://ww2.jeppesen.com/" class="btn btn-primary" target="_blank">Company's website</a>
 					</div>
 				</div>
 			</div>
@@ -72,7 +72,7 @@
 					<div class="card-body">
 						<h5 class="card-title">HUMAN RESOURCES</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-primary">Company's website</a>
+						<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-primary" target="_blank">Company's website</a>
 					</div>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 				<div class="card-body">
 					<h5 class="card-title">TV NEWS MEDIA</h5>
 					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					<a href="https://tvn24.pl/" class="btn btn-primary">Company's website</a>
+					<a href="https://tvn24.pl/" class="btn btn-primary" target="_blank">Company's website</a>
 				</div>
 			</div>
 		</div>
