--- a/tech.html
+++ b/tech.html
@@ -62,7 +62,7 @@
 					<div class="card-body">
 						<h5 class="card-title">FRONT END</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					
+					<a href="#" class="btn btn-primary" target="_blank">Portfolio</a>
 					</div>
 				</div>
 			</div>
@@ -71,7 +71,8 @@
 					<div class="card-body">
 						<h5 class="card-title">BACK END</h5>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					
+					<a href="#" class="btn btn-primary" target="_blank">Portfolio 1</a>
+                    <a href="#" class="btn btn-primary" target="_blank">Portfolio 2</a>
 					</div>
 				</div>
 			</div>
