page agile done

--- a/softskills.html
+++ b/softskills.html
@@ -40,7 +40,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
-                    <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 				</ul>
@@ -48,22 +48,23 @@
 		</nav>
 	</header>
 
+	<!--IMAGE-->
 	<div class="container">
 		<div class="row">
 			<div class="col">
 				<div class="softskills-image image"></div>
 			</div>
 		</div>
-	</div>
 
-    <!--CARDS-->
-    <div class="row">
+		<!--CARDS-->
+		<div class="row">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">IT in AVIATION</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="https://ww2.jeppesen.com/" class="btn btn-primary" target="_blank">Company's website</a>
+						<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non nesciunt sapiente vero quasi fuga, eum vitae dicta ratione? Commodi porro harum quaerat, laboriosam recusandae pariatur sit id magni hic quas.</p>
+						<a href="https://ww2.jeppesen.com/" class="btn btn-primary" target="_blank">Company's
+							website</a>
 					</div>
 				</div>
 			</div>
@@ -71,44 +72,46 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">HUMAN RESOURCES</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-primary" target="_blank">Company's website</a>
+						<p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat dicta, neque explicabo laborum delectus corrupti maiores perspiciatis rerum quaerat! Esse unde beatae eligendi. Modi tempore iste placeat in explicabo veritatis.</p>
+						<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-primary" target="_blank">Company's
+							website</a>
 					</div>
 				</div>
 			</div>
-            <div class="col-sm-4">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title">TV NEWS MEDIA</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					<a href="https://tvn24.pl/" class="btn btn-primary" target="_blank">Company's website</a>
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">TV NEWS MEDIA</h5>
+						<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit fugit sed harum quas a aliquam tempora at ab cupiditate optio magnam, sunt explicabo animi, provident exercitationem consectetur expedita quisquam ducimus.</p>
+						<a href="https://tvn24.pl/" class="btn btn-primary" target="_blank">Company's website</a>
+					</div>
 				</div>
 			</div>
 		</div>
-		</div>
-  
-	<!--FOOTER-->
-	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-		<div class="container text-center">
-			<span class="download">
+        </div>
+
+		<!--FOOTER-->
+		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+			<div class="container text-center">
+				<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><hr>
                             </span>
-			<span class="copy-right">
+				<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
                 </span>
-		</div>
-	</footer>
+			</div>
+		</footer>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 
 </body>
 
