--- a/tech.html
+++ b/tech.html
@@ -61,7 +61,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">FRONT END</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. sit amet consectetur adipisicing elit Corporis, accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam repellat illo!</p>
 					<a href="#" class="btn btn-primary" target="_blank">Portfolio</a>
 					</div>
 				</div>
@@ -70,7 +70,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">BACK END</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text">10 Lorem ipsum dolor,, sit amet consectetur adipisicing elit sit amet consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam repellat illo!</p>
 					<a href="#" class="btn btn-primary" target="_blank">Portfolio 1</a>
                     <a href="#" class="btn btn-primary" target="_blank">Portfolio 2</a>
 					</div>
@@ -79,9 +79,10 @@
             <div class="col-sm-4">
 			<div class="card">
 				<div class="card-body">
-					<h5 class="card-title">TESTING</h5>
-					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-					
+					<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
+					<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam repellat illo!</p>
+					<a href="https://www.ireb.org/en" class="btn btn-primary" target="_blank">IREB</a>
+                    <a href="https://www.istqb.org/" class="btn btn-primary" target="_blank">ISTQB</a>
 				</div>
 			</div>
 		</div>
