--- a/agile.html
+++ b/agile.html
@@ -58,12 +58,12 @@
 		</div>
 
 		<!--METODOLOGIES-->
-		<div class="row">
+		<div class="row cards">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">SCRUM</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, asperiores? Ipsum tempore culpa magni. Id illum obcaecati temporibus vitae accusantium, commodi quos maiores et. Provident dolore reprehenderit est molestiae obcaecati?</p>
 						<a href="https://www.scrum.org/" class="btn btn-primary" target="_blank">Official website</a>
 					</div>
 				</div>
@@ -72,7 +72,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">KANBAN</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi repellendus sint magnam explicabo nulla sit vel itaque minus sequi? Illo officiis, dolor distinctio soluta vero quibusdam. Quasi repudiandae neque error.</p>
 						<a href="https://www.scrum.org/resources/kanban-guide-scrum-teams"
 							class="btn btn-primary" target="_blank">Official website</a>
 					</div>
@@ -82,7 +82,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">SAFe</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci nostrum autem animi voluptatem. Inventore, repudiandae? Vel voluptates quo nobis sequi voluptas laboriosam alias. Eligendi, deleniti dolorum a porro earum consectetur.</p>
 						<a href="https://www.scaledagileframework.com/" class="btn btn-primary" target="_blank">Official website</a>
 					</div>
 				</div>
