working on sills progress

--- a/softskills.html
+++ b/softskills.html
@@ -57,7 +57,7 @@
 		</div>
 
 		<!--CARDS-->
-		<div class="row">
+		<div class="row cards-softskills">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
