--- a/tech.html
+++ b/tech.html
@@ -89,7 +89,7 @@
 		</div>
 
 		<!--PROGRESS SKILLS-->
-		<div class="row">
+		<div class="row progress-skills">
 			<div class="col">
 				<div class="progress">
 					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
