--- a/agile.html
+++ b/agile.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<!--METODOLOGIES-->
-		<div class="row cards">
+		<div class="row cards-agile">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
