progress skills fixed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<div class="container-fluid content">
 		<div class="row">
 			<div class="col-lg-6 landing-image image"></div>
-			<div class="col-lg-6"></div>
+			<div class="col-lg-6 personal-info"></div>
 		</div>
 
 		<!--TYPEWRITER-->
