--- a/tech.html
+++ b/tech.html
@@ -56,7 +56,7 @@
 		</div>
 
         <!--CARDS-->
-        <div class="row">
+        <div class="row cards-tech">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
@@ -110,21 +110,7 @@
 						aria-valuemin="0" aria-valuemax="100" style="width:10%">
 						10% Complete (warning)
 					</div>
-					<span class="progress-type">JS/React</span>
-				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-						aria-valuemin="0" aria-valuemax="100" style="width:20%">
-						20% Complete (danger)
-					</div>
-					<span class="progress-type">TypeScript</span>
-				</div>
-				<div class="progress">
-					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-						aria-valuemin="0" aria-valuemax="100" style="width:10%">
-						10% Complete (danger)
-					</div>
-					<span class="progress-type">Java</span>
+					<span class="progress-type">JS/TypeScript</span>
 				</div>
 				<div class="progress">
 					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
@@ -133,12 +119,12 @@
 					</div>
 					<span class="progress-type">Python/Django</span>
 				</div>
-				<div class="progress">
+				<!-- <div class="progress">
 					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
 						aria-valuemin="0" aria-valuemax="100" style="width:20%">
 						20% Complete (danger)
 					</div>
-					<span class="progress-type">SQL</span>
+					<span class="progress-type">SQL</span> -->
 				</div>
 			</div>
 		</div>
