footer in contact fixed

--- a/tech.html
+++ b/tech.html
@@ -94,35 +94,35 @@
 				<div class="progress">
 					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 						aria-valuemin="0" aria-valuemax="100" style="width:50%">
-						50% Complete (success)
+						50% Complete
 					</div>
 					<span class="progress-type">HTML/HTML5</span>
 				</div>
 				<div class="progress">
 					<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0"
 						aria-valuemax="100" style="width:40%">
-						40% Complete (info)
+						40% Complete
 					</div>
 					<span class="progress-type">CSS/CSS3</span>
 				</div>
 				<div class="progress">
 					<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
 						aria-valuemin="0" aria-valuemax="100" style="width:10%">
-						10% Complete (warning)
+						10%
 					</div>
 					<span class="progress-type">JS/TypeScript</span>
 				</div>
 				<div class="progress">
 					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
 						aria-valuemin="0" aria-valuemax="100" style="width:5%">
-						5% Complete (danger)
+						5%
 					</div>
 					<span class="progress-type">Python/Django</span>
 				</div>
 				<!-- <div class="progress">
 					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
 						aria-valuemin="0" aria-valuemax="100" style="width:20%">
-						20% Complete (danger)
+						20% Complete
 					</div>
 					<span class="progress-type">SQL</span> -->
 				</div>
