--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 	<!--CONTENT-->
 	<div class="container-fluid content">
 		<div class="row">
-			<div class="col-lg-6 landing-image image"></div>
-			<div class="col-lg-6 personal-info"></div>
+        <div class="col-lg-4 empty-space"></div>
+			<div class="col-lg-4 landing-image image"></div>
+			<div class="col-lg-4 personal-info"></div>
 		</div>
 
 		<!--TYPEWRITER-->
