changing main page

--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,8 @@
 						<div class="address">
 							<h5>Address:</h5>
 							<ul class="list-unstyled">
-								<li> Pargasgatan 34 Lgh 1201</li>
-								<li> 16471 Kista, Stockholm</li>
+								<li> Pargasgatan 34</li>
+								<li> 16471 Stockholm</li>
 							</ul>
 						</div>
 						<div class="email">
