personal info added

--- a/agile.html
+++ b/agile.html
@@ -95,7 +95,7 @@
 		<div class="container text-center">
 			<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
-							<i class="fas fa-download"></i></a></small><hr>
+							<i class="fas fa-download"></i></a></small><br>
                             </span>
 			<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
