--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
+			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
-                    <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 				</ul>
@@ -51,18 +51,22 @@
 	<!--CONTENT-->
 	<div class="container-fluid content">
 		<div class="row">
-			<div class="col-lg-6 landing-image image"></div>
-			<div class="col-lg-6 personal-info"></div>
-		</div>
+			<div class="col-lg-8 landing-image image"></div>
+			<div class="col-lg-2 personal-info"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+				quaerat fuga in libero officia, enim voluptatibus ex vitae magnam commodi quasi fugiat omnis nisi
+				sapiente aspernatur hic voluptatum minima excepturi?</p></div>
 
-		<!--TYPEWRITER-->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="typewriter" id="landing-content">
-					<h1>I am full stack developer.</h1>
-				</div>
+		</div>
+	</div>
+
+	<!--TYPEWRITER-->
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="typewriter" id="landing-content">
+				<h1>I am full stack developer.</h1>
 			</div>
 		</div>
+	</div>
 	</div>
 
 	<!-- <div class="row">
@@ -77,7 +81,7 @@
 		<div class="container text-center">
 			<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
-							<i class="fas fa-download"></i></a></small><hr>
+							<i class="fas fa-download"></i></a></small><br>
                             </span>
 			<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
