--- a/agile.html
+++ b/agile.html
@@ -64,7 +64,7 @@
 					<div class="card-body">
 						<h5 class="card-title">SCRUM</h5>
 						<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, asperiores? Ipsum tempore culpa magni. Id illum obcaecati temporibus vitae accusantium, commodi quos maiores et. Provident dolore reprehenderit est molestiae obcaecati?</p>
-						<a href="https://www.scrum.org/" class="btn btn-primary" target="_blank">Official website</a>
+						<a href="https://www.scrum.org/" class="btn btn-secondary" target="_blank">Official website</a>
 					</div>
 				</div>
 			</div>
@@ -74,7 +74,7 @@
 						<h5 class="card-title">KANBAN</h5>
 						<p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi repellendus sint magnam explicabo nulla sit vel itaque minus sequi? Illo officiis, dolor distinctio soluta vero quibusdam. Quasi repudiandae neque error.</p>
 						<a href="https://www.scrum.org/resources/kanban-guide-scrum-teams"
-							class="btn btn-primary" target="_blank">Official website</a>
+							class="btn btn-secondary" target="_blank">Official website</a>
 					</div>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 					<div class="card-body">
 						<h5 class="card-title">SAFe</h5>
 						<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci nostrum autem animi voluptatem. Inventore, repudiandae? Vel voluptates quo nobis sequi voluptas laboriosam alias. Eligendi, deleniti dolorum a porro earum consectetur.</p>
-						<a href="https://www.scaledagileframework.com/" class="btn btn-primary" target="_blank">Official website</a>
+						<a href="https://www.scaledagileframework.com/" class="btn btn-secondary" target="_blank">Official website</a>
 					</div>
 				</div>
 			</div>
