--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
 												</div>
 
 												<div class="form-row">
-													<button type="button" class="btn btn-dark">Submit</button>
+													<button type="button" class="btn btn-secondary">Submit</button>
 												</div>
 								</form>
 							</div>
