--- a/softskills.html
+++ b/softskills.html
@@ -62,8 +62,8 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">IT in AVIATION</h5>
-						<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non nesciunt sapiente vero quasi fuga, eum vitae dicta ratione? Commodi porro harum quaerat, laboriosam recusandae pariatur sit id magni hic quas.</p>
-						<a href="https://ww2.jeppesen.com/" class="btn btn-primary" target="_blank">Company's
+						<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non nesciunt sapiente vero quasi fuga, eum vitae dicta ratione? Commodi porro harum quaerat, laboriosam recusandae pariatur sit id magni hic quas. <i class="fas fa-plane"></i></p>
+						<a href="https://ww2.jeppesen.com/" class="btn btn-secondary" target="_blank">Company's
 							website</a>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 					<div class="card-body">
 						<h5 class="card-title">HUMAN RESOURCES</h5>
 						<p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat dicta, neque explicabo laborum delectus corrupti maiores perspiciatis rerum quaerat! Esse unde beatae eligendi. Modi tempore iste placeat in explicabo veritatis.</p>
-						<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-primary" target="_blank">Company's
+						<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-secondary" target="_blank">Company's
 							website</a>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 					<div class="card-body">
 						<h5 class="card-title">TV NEWS MEDIA</h5>
 						<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit fugit sed harum quas a aliquam tempora at ab cupiditate optio magnam, sunt explicabo animi, provident exercitationem consectetur expedita quisquam ducimus.</p>
-						<a href="https://tvn24.pl/" class="btn btn-primary" target="_blank">Company's website</a>
+						<a href="https://tvn24.pl/" class="btn btn-secondary" target="_blank">Company's website</a>
 					</div>
 				</div>
 			</div>
