--- a/tech.html
+++ b/tech.html
@@ -40,7 +40,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
-                    <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 				</ul>
@@ -55,14 +55,16 @@
 			</div>
 		</div>
 
-        <!--CARDS-->
-        <div class="row cards-tech">
+		<!--CARDS-->
+		<div class="row cards-tech">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">FRONT END</h5>
-						<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. sit amet consectetur adipisicing elit Corporis, accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam repellat illo!</p>
-					<a href="#" class="btn btn-primary" target="_blank">Portfolio</a>
+						<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. sit amet
+							consectetur adipisicing elit Corporis, accusamus vitae praesentium eum enim temporibus neque
+							asperiores officiis odit magnam repellat illo!</p>
+						<a href="#" class="btn btn-secondary" target="_blank">Portfolio</a>
 					</div>
 				</div>
 			</div>
@@ -70,22 +72,26 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">BACK END</h5>
-						<p class="card-text">10 Lorem ipsum dolor,, sit amet consectetur adipisicing elit sit amet consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam repellat illo!</p>
-					<a href="#" class="btn btn-primary" target="_blank">Portfolio 1</a>
-                    <a href="#" class="btn btn-primary" target="_blank">Portfolio 2</a>
+						<p class="card-text">10 Lorem ipsum dolor,, sit amet consectetur adipisicing elit sit amet
+							consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus
+							neque asperiores officiis odit magnam repellat illo!</p>
+						<a href="#" class="btn btn-secondary" target="_blank">Portfolio 1</a>
+						<a href="#" class="btn btn-secondary" target="_blank">Portfolio 2</a>
 					</div>
 				</div>
 			</div>
-            <div class="col-sm-4">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
-					<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam repellat illo!</p>
-					<a href="https://www.ireb.org/en" class="btn btn-primary" target="_blank">IREB</a>
-                    <a href="https://www.istqb.org/" class="btn btn-primary" target="_blank">ISTQB</a>
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
+							<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis,
+								accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam
+								repellat illo!</p>
+							<a href="https://www.ireb.org/en" class="btn btn-secondary" target="_blank">IREB</a>
+							<a href="https://www.istqb.org/" class="btn btn-secondary" target="_blank">ISTQB</a>
+					</div>
 				</div>
 			</div>
-		</div>
 		</div>
 
 		<!--PROGRESS SKILLS-->
@@ -125,9 +131,9 @@
 						20% Complete
 					</div>
 					<span class="progress-type">SQL</span> -->
-				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 
 	<!--FOOTER-->
