contact icons added

--- a/contact.html
+++ b/contact.html
@@ -60,30 +60,32 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h4>Get in touch</h4>
 						<hr>
 					</div>
 					<div class="col-md-6">
-						<div class="address">
-							<h5>Address:</h5>
+						<div class="address list-styled">
+							<h5><i class="fas fa-map-pin"></i> Address</h5>
 							<ul class="list-unstyled">
 								<li> Pargasgatan 34</li>
 								<li> 16471 Stockholm</li>
 							</ul>
 						</div>
-						<div class="email">
-							<h5>Email:</h5>
+						<div class="email list-styled">
+							<h5><i class="fas fa-at"></i> Email</h5>
 							<ul class="list-unstyled">
 								<li> anna.jan.jansson@gmail.com</li>
 							</ul>
 						</div>
-						<div class="phone">
-							<h5>Phone:</h5>
+						<div class="phone list-styled">
+							<h5><i class="fas fa-phone-volume"></i> Phone</h5>
 							<ul class="list-unstyled">
 								<li> +46 793360854</li>
 							</ul>
 						</div>
+                        <div>
+                       <h4>Get in touch</h4>
 						<hr>
+                        </div>
 						<div class="social">
 							<ul class="list-inline list-unstyled">
 								<li class="list-inline-item">
@@ -127,6 +129,7 @@
 
 												<div class="form-row">
 													<button type="button" class="btn btn-secondary">Submit</button>
+                                                    <hr>
 												</div>
 								</form>
 							</div>
