footer commented out

--- a/tech.html
+++ b/tech.html
@@ -137,7 +137,7 @@
 	</div>
 
 	<!--FOOTER-->
-	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+	<!-- <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
 		<div class="container text-center">
 			<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
@@ -147,7 +147,7 @@
 				<small>Copyright &copy; Anna Janiak</small>
                 </span>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
