--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 		</div>
 
 		<!--CONTACT FORM-->
-		<section class="contact py-5" id="contact">
+		<section class="contact" id="contact">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -129,16 +129,17 @@
 
 												<div class="form-row">
 													<button type="button" class="btn btn-secondary">Submit</button>
-                                                    <hr>
 												</div>
 								</form>
 							</div>
 						</div>
+                       
 					</div>
+                   
 				</div>
+                 <hr>
 			</div>
 		</section>
-
     </div>
 
 
