spyscroll added only tech

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<!-- NAVIGATION -->
+	
 	<header>
 		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 
-		<!--CONTACT FORM-->
+		
 		<section class="contact" id="contact">
 			<div class="container">
 				<div class="row">
@@ -167,4 +167,4 @@
 
 </body>
 
-</html>
+</html> -->
