--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<!-- NAVIGATION -->
 	<header>
-		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark" id="test-navbar">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
 			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
@@ -27,7 +27,7 @@
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="tech.html">TECH
+						<a class="nav-link" href="#tech">TECH
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
@@ -49,45 +49,115 @@
 	</header>
 
 	<!--CONTENT-->
-	<div class="container-fluid content">
+	<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
+		<div class="container-fluid content">
+			<div class="row">
+				<div class="col-lg-10 landing-image image"></div>
+			</div>
+		</div>
+
+		<!--TYPEWRITER-->
 		<div class="row">
-			<div class="col-lg-8 landing-image image"></div>
-			<div class="col-lg-2 personal-info"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-				quaerat fuga in libero officia, enim voluptatibus ex vitae magnam commodi quasi fugiat omnis nisi
-				sapiente aspernatur hic voluptatum minima excepturi?</p></div>
-
-		</div>
-	</div>
-
-	<!--TYPEWRITER-->
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="typewriter" id="landing-content">
-				<h1>I am full stack developer.</h1>
+			<div class="col-lg-12">
+				<div class="typewriter" id="landing-content">
+					<h1>I'm a full stack developer.</h1>
+				</div>
 			</div>
 		</div>
 	</div>
+
+	<!--TECH CONTAINER-->
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div class="tech-image image"></div>
+			</div>
+		</div>
+
+		<!-- CARDS -->
+		<div class="row cards-tech">
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">FRONT END</h5>
+						<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. sit amet
+							consectetur adipisicing elit Corporis, accusamus vitae praesentium eum enim temporibus neque
+							asperiores officiis odit magnam repellat illo!</p>
+						<a href="#" class="btn btn-secondary" target="_blank">Portfolio</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">BACK END</h5>
+						<p class="card-text">10 Lorem ipsum dolor,, sit amet consectetur adipisicing elit sit amet
+							consectetur adipisicing elit. Corporis, accusamus vitae praesentium eum enim temporibus
+							neque asperiores officiis odit magnam repellat illo!</p>
+						<a href="#" class="btn btn-secondary" target="_blank">Portfolio 1</a>
+						<a href="#" class="btn btn-secondary" target="_blank">Portfolio 2</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">REQUIREMENTS &<br> TESTING</h5>
+							<p class="card-text">10 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis,
+								accusamus vitae praesentium eum enim temporibus neque asperiores officiis odit magnam
+								repellat illo!</p>
+							<a href="https://www.ireb.org/en" class="btn btn-secondary" target="_blank">IREB</a>
+							<a href="https://www.istqb.org/" class="btn btn-secondary" target="_blank">ISTQB</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--PROGRESS SKILLS-->
+		<div class="row progress-skills">
+			<div class="col">
+				<div class="progress">
+					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+						aria-valuemin="0" aria-valuemax="100" style="width:50%">
+						50% Complete
+					</div>
+					<span class="progress-type">HTML/HTML5</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+						aria-valuemax="100" style="width:40%">
+						40% Complete
+					</div>
+					<span class="progress-type">CSS/CSS3</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
+						aria-valuemin="0" aria-valuemax="100" style="width:10%">
+						10%
+					</div>
+					<span class="progress-type">JS/TypeScript</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+						aria-valuemin="0" aria-valuemax="100" style="width:5%">
+						5%
+					</div>
+					<span class="progress-type">Python/Django</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+						aria-valuemin="0" aria-valuemax="100" style="width:20%">
+						20% Complete
+					</div>
+					<span class="progress-type">SQL</span>
+				</div>
+			</div>
+		</div>
 	</div>
 
-	<!-- <div class="row">
-		<div class="col-lg-12">
-			<div class="extra-info" id="landing-content">
-				<h1>... having experience in Human Resources and TV News Media.</h1>
-			</div>
-			</div> -->
 
-	<!--FOOTER-->
-	<!-- <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-		<div class="container text-center">
-			<span class="download">
-            <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
-							<i class="fas fa-download"></i></a></small><br>
-                            </span>
-			<span class="copy-right">
-				<small>Copyright &copy; Anna Janiak</small>
-                </span>
-		</div>
-	</footer> -->
+
+
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
