--- a/softskills.html
+++ b/softskills.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<!-- NAVIGATION -->
+
 	<header>
 		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
@@ -48,7 +48,6 @@
 		</nav>
 	</header>
 
-	<!--IMAGE-->
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -56,7 +55,6 @@
 			</div>
 		</div>
 
-		<!--CARDS-->
 		<div class="row cards-softskills">
 			<div class="col-sm-4">
 				<div class="card">
@@ -90,19 +88,6 @@
 		</div>
         </div>
 
-		<!--FOOTER-->
-		<!-- <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-			<div class="container text-center">
-				<span class="download">
-            <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
-							<i class="fas fa-download"></i></a></small><br>
-                            </span>
-				<span class="copy-right">
-				<small>Copyright &copy; Anna Janiak</small>
-                </span>
-			</div>
-		</footer> -->
-
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 		</script>
@@ -115,4 +100,4 @@
 
 </body>
 
-</html>
+</html> -->
