--- a/tech.html
+++ b/tech.html
@@ -16,7 +16,7 @@
 
 <body>
 	<!-- NAVIGATION -->
-	<header>
+	<!-- <header>
 		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -46,17 +46,17 @@
 				</ul>
 			</div>
 		</nav>
-	</header>
+	</header> -->
 
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col">
 				<div class="tech-image image"></div>
 			</div>
-		</div>
+		</div> -->
 
-		<!--CARDS-->
-		<div class="row cards-tech">
+		<!-- CARDS -->
+		<!-- <div class="row cards-tech">
 			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
@@ -92,10 +92,10 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!--PROGRESS SKILLS-->
-		<div class="row progress-skills">
+		<!-- <div class="row progress-skills">
 			<div class="col">
 				<div class="progress">
 					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
@@ -125,17 +125,17 @@
 					</div>
 					<span class="progress-type">Python/Django</span>
 				</div>
-				<!-- <div class="progress">
+				<div class="progress">
 					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
 						aria-valuemin="0" aria-valuemax="100" style="width:20%">
 						20% Complete
 					</div>
-					<span class="progress-type">SQL</span> -->
+					<span class="progress-type">SQL</span>
 			</div>
 		</div>
 	</div>
-	</div>
-
+	</div> --> 
+    
 	<!--FOOTER-->
 	<!-- <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
 		<div class="container text-center">
